--- a/cmd/remote-server/web/index.html
+++ b/cmd/remote-server/web/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- +++ NOVA Tela de Conexão +++ -->
+    <!-- +++ Tela de Conexão +++ -->
     <div id="connection-overlay">
         <div class="connection-box">
             <h2>Conectar ao Argus AaaS</h2>
-            <p>Insira sua Agent Key para iniciar a sessão.</p>
+            <p>Insira a sua Agent Key para iniciar a sessão.</p>
             <input type="text" id="agent-key-input" placeholder="ex: paulo_sk_123abc" autocomplete="off">
             <button id="connect-btn">Conectar</button>
             <p id="connection-status"></p>
@@ -22,32 +22,35 @@
 
     <div class="container">
         <header>
-            <h1>[ARGUS FRAMEWORK] - Man-in-the-Middle Interface</h1>
+            <h1>[ARGUS FRAMEWORK] - Interface Man-in-the-Middle</h1>
         </header>
+
         <div class="columns">
             <main class="main-panel">
                 <div class="status-panel">
                     <div id="client-status" class="status-box disconnected">
-                        <strong>&gt; AGENTE_LOCAL:</strong> <span>OFFLINE</span>
+                        <strong>&gt; AGENTE LOCAL:</strong> <span>OFFLINE</span>
                     </div>
                     <div id="server-status" class="status-box disconnected">
-                        <strong>&gt; APP_VIRTUAL:</strong> <span>AWAITING</span>
+                        <strong>&gt; APP VIRTUAL:</strong> <span>A AGUARDAR</span>
                     </div>
                 </div>
+
                 <div class="data-grid">
                     <div class="data-box">
-                        <h2 title="Potência lida do seu rolo de treino.">POTÊNCIA_REAL</h2>
+                        <h2 title="Potência lida do seu rolo de treino.">POTÊNCIA REAL</h2>
                         <p><span id="real-power">---</span> W</p>
                     </div>
                     <div class="data-box modified">
-                        <h2 title="Potência enviada para o jogo.">POTÊNCIA_MODIFICADA</h2>
+                        <h2 title="Potência enviada para o jogo.">POTÊNCIA MODIFICADA</h2>
                         <p><span id="modified-power">---</span> W</p>
                     </div>
                     <div class="data-box">
-                        <h2 title="Frequência cardíaca simulada.">HEART_RATE_SIM</h2>
+                        <h2 title="Frequência cardíaca simulada.">HEART RATE SIM</h2>
                         <p><span id="heart-rate">---</span> BPM</p>
                     </div>
                 </div>
+
                 <section class="control-panel">
                     <h2>// MODO DE OPERAÇÃO</h2>
                     <div class="control-item">
@@ -59,8 +62,9 @@
                         <label for="main-mode-bot">Modo Bot (Simulação Total)</label>
                     </div>
                 </section>
+
                 <section class="control-panel boost-controls">
-                    <h2>// BOOST PAYLOAD CONTROLS</h2>
+                    <h2>// CONTROLOS DE PAYLOAD BOOST</h2>
                     <div class="control-item">
                         <input type="checkbox" id="attack-active" checked>
                         <label for="attack-active">Ataque Ativo</label>
@@ -82,45 +86,52 @@
                         </div>
                     </div>
                 </section>
+
                 <section class="control-panel bot-controls">
-                    <h2>// BOT SIMULATION CONTROLS</h2>
+                    <h2>// CONTROLOS DE SIMULAÇÃO DO BOT</h2>
                     <div class="control-item-range">
-                        <label>Range de Potência (W): <span id="bot-power-display">180 - 220</span></label>
+                        <label>Intervalo de Potência (W): <span id="bot-power-display">180 - 220</span></label>
                         <div class="range-sliders">
                             <label for="bot-power-min">Min:</label> <input type="range" id="bot-power-min" min="0" max="500" value="180">
                             <label for="bot-power-max">Max:</label> <input type="range" id="bot-power-max" min="0" max="500" value="220">
                         </div>
                     </div>
                      <div class="control-item-range">
-                        <label>Range de Cadência (RPM): <span id="bot-cadence-display">85 - 95</span></label>
+                        <label>Intervalo de Cadência (RPM): <span id="bot-cadence-display">85 - 95</span></label>
                         <div class="range-sliders">
                             <label for="bot-cadence-min">Min:</label> <input type="range" id="bot-cadence-min" min="0" max="150" value="85">
                             <label for="bot-cadence-max">Max:</label> <input type="range" id="bot-cadence-max" min="0" max="150" value="95">
                         </div>
                     </div>
                 </section>
+                
                 <section class="control-panel">
-                    <h2>// FORWARD_CONTROLS</h2>
+                    <h2>// CONTROLOS DE FORWARD</h2>
                     <div class="control-item">
                         <input type="checkbox" id="resistance-active" checked>
                         <label for="resistance-active">Encaminhar Resistência</label>
                     </div>
                 </section>
+
                 <div class="panel-footer">
-                    <button id="shutdown-button" disabled>[TERMINATE_SESSION_DISABLED]</button>
+                    <button id="shutdown-button" disabled>[TERMINAR SESSÃO (DESATIVADO)]</button>
                 </div>
             </main>
+
             <aside class="sidebar">
                 <div class="chart-panel">
-                    <h2>// POWER_TIMELINE</h2>
+                    <h2>// TIMELINE DE POTÊNCIA</h2>
                     <canvas id="powerChart"></canvas>
                 </div>
             </aside>
         </div>
+
         <footer class="footer">
             <small>Argus Framework — Protótipo de Pesquisa</small>
         </footer>
     </div>
+
     <script src="app.js"></script>
 </body>
 </html>
+
