feat: Adiciona endpoint e fluxo de registro de usuário

--- a/cmd/remote-server/web/index.html
+++ b/cmd/remote-server/web/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- +++ Tela de Conexão +++ -->
     <div id="connection-overlay">
         <div class="connection-box">
             <h2>Conectar ao Argus AaaS</h2>
@@ -17,6 +16,9 @@
             <input type="text" id="agent-key-input" placeholder="ex: paulo_sk_123abc" autocomplete="off">
             <button id="connect-btn">Conectar</button>
             <p id="connection-status"></p>
+
+            <p style="margin-top: 1rem; font-size: 0.9em;">Não tem uma conta? <a href="/register.html" style="color: var(--primary-color);">Crie uma aqui</a>.</p>
+
         </div>
     </div>
 
