fix: Corrige typo no 'type' do input de username em register.html

--- a/cmd/remote-server/web/register.html
+++ b/cmd/remote-server/web/register.html
@@ -13,7 +13,7 @@
             <h2>Criar Conta Argus</h2>
             <p>Escolha seu nome de usuário e sua Agent Key.</p>
             
-            <input type.text" id="username-input" placeholder="Nome de usuário (ex: paulo)" autocomplete="off" style="margin-bottom: 0.5rem;">
+            <input type="text" id="username-input" placeholder="Nome de usuário (ex: paulo)" autocomplete="off">
             <input type="text" id="agent-key-input" placeholder="Sua Agent Key (ex: paulo_sk_123)" autocomplete="off">
             
             <button id="register-btn">Criar Conta</button>
